# periwinkle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pconfig.h.in  барвінок.ebnf  барвінок.граматика
CMakeModules/: FindJPCRE2.cmake  FindPCRE2.cmake
include/: pconfig.hpp.in  periwinkle.hpp  platform.hpp  plogger.hpp  program_source.hpp  string_enum.hpp  types.hpp  unicode.hpp  utils.hpp
include/ast/: ast.hpp  keyword.hpp
include/compiler/: compiler.hpp  disassembler.hpp  scope.hpp
include/object/: bool_object.hpp  cell_object.hpp  code_object.hpp  end_iteration_object.hpp  exception_object.hpp  function_object.hpp  int_object.hpp  list_object.hpp  method_with_instance_object.hpp  native_function_object.hpp  native_method_object.hpp  null_object.hpp  object.hpp  real_object.hpp  string_object.hpp  string_vector_object.hpp  tuple_object.hpp  validate_args.hpp
include/vm/: argument_parser.hpp  builtins.hpp  gc.hpp  vm.hpp
launcher/: launcher.cpp  launcher.hpp  main.cpp  wmain.cpp
libs/: pcre2-8-static.lib  pcre2-8-staticd.lib
periwinkle/: periwinkle.cpp  platform_linux.cpp  platform_win.cpp  program_source.cpp  unicode.cpp  utils.cpp
periwinkle/compiler/: compiler.cpp  disassembler.cpp  scope.cpp
periwinkle/object/: bool_object.cpp  cell_object.cpp  code_object.cpp  end_iteration_object.cpp  exception_object.cpp  function_object.cpp  int_object.cpp  list_object.cpp  method_with_instance_object.cpp  native_function_object.cpp  native_method_object.cpp  null_object.cpp  object.cpp  real_object.cpp  string_object.cpp  string_vector_object.cpp  tuple_obect.cpp  validate_args.cpp
periwinkle/vm/: argument_parser.cpp  builtins.cpp  gc.cpp  vm.cpp
src/include/: periwinkle.h  plogger.h  string_enum.h  types.h  utils.h
src/include/ast/: ast.h  keyword.h
src/include/compiler/: compiler.h  decompiler.h  disassembler.h  scope.h
src/include/lexer/: lexer.h
src/include/object/: array_object.h  bool_object.h  call.h  cell_object.h  code_object.h  end_iteration_object.h  exception_object.h  function_object.h  int_object.h  list_object.h  method_with_instance_object.h  native_function_object.h  native_method_object.h  null_object.h  object.h  real_object.h  string_object.h  string_vector_object.h  validate_args.h
src/include/parser/: expression.h  node.h  node_kind.h  parser.h  statement.h
src/include/vm/: argument_parser.h  builtins.h  exception.h  vm.h
src/periwinkle/: main.cpp  periwinkle.cpp  utils.cpp
src/periwinkle/compiler/: compiler.cpp  decompiler.cpp  disassembler.cpp  scope.cpp
src/periwinkle/lexer/: lexer.cpp
src/periwinkle/object/: array_object.cpp  bool_object.cpp  call.cpp  cell_object.cpp  code_object.cpp  end_iteration_object.cpp  exception_object.cpp  function_object.cpp  int_object.cpp  list_object.cpp  method_with_instance_object.cpp  native_function_object.cpp  native_method_object.cpp  null_object.cpp  object.cpp  real_object.cpp  string_object.cpp  string_vector_object.cpp  validate_args.cpp
src/periwinkle/parser/: parser.cpp
src/periwinkle/vm/: argument_parser.cpp  builtins.cpp  exception.cpp  vm.cpp
tools/unicode/: generate.py
